adding radio player

--- a/info.html
+++ b/info.html
@@ -101,9 +101,9 @@
             <!-- /header -->
 
             <div data-role="content">
-                <p>Om een internetradiostation te beluisteren moet je een app installeren die
-                        <i>live</i> verbinding maakt met de radioserver. De opgelijste koppelingen
-                    verwijzen naar M3U-bestanden, die de locatie van zo'n server beschrijven. Als alternatief zijn ook PLS-bestanden beschikbaar.</p>
+                <p>Om een internetradiostation te beluisteren op Android-toestellen, 
+                   moet je een app installeren die <i>live</i> verbinding maakt 
+                   met de radioserver.</p>
                 <h3>Just Playlists</h3>
                 <p><i>Just Playlists</i> is een Android app om internetradiostations te
                     beluisteren</p>
@@ -112,16 +112,6 @@
                         <a
                             href="https://play.google.com/store/apps/details?id=org.journeyman.android.apps.justplaylists&amp;hl=nl">
                             <img src="img/just-playlists.jpg" />Installeer <i>Just Playlists</i>
-                        </a>
-                    </li>
-                </ul>
-                <h3>ServeStream</h3>
-                <p><i>ServeStream</i> is een Android app om internetradiostations te beluisteren</p>
-                <ul data-role="listview" data-inset="true">
-                    <li>
-                        <a
-                            href="https://play.google.com/store/apps/details?id=net.sourceforge.servestream&amp;hl=nl">
-                            <img src="img/servestream.png" />Installeer <i>ServeStream</i>
                         </a>
                     </li>
                 </ul>
