--- a/internetradio.html
+++ b/internetradio.html
@@ -29,10 +29,6 @@
             <!-- /header -->
             
             <div data-role="content">
-                        <p>
-              <video controls src="http://credomobiel.net/internetradio/radio-maria-vlaanderen.m3u">
-            </p>
-
                 <ul data-role="listview">
                     <li data-theme="e">
                         <a href="info.html#internetradio-info" rel="external">
@@ -41,32 +37,32 @@
                     </li>
                     <li data-icon="plus" class="android">
                         <a href="http://credomobiel.net/internetradio/radio-maria-vlaanderen.pls" rel="external">
-                            <img src="img/radiomaria.jpg" />Radio Maria Vlaanderen <br/>
+                            <img src="img/radiomaria.jpg" />Radio Maria Vlaanderen <span class="ios">(.pls)</span>
                         </a>
                     </li>
                     <li data-icon="plus" class="ios">
                         <a href="http://credomobiel.net/internetradio/radio-maria-vlaanderen.m3u" rel="external">
-                            <img src="img/radiomaria.jpg" />Radio Maria Vlaanderen <br/>
+                            <img src="img/radiomaria.jpg" />Radio Maria Vlaanderen <span class="android">(.m3u)</span>
                         </a>
                     </li>
                     <li data-icon="plus" class="android">
                         <a href="http://credomobiel.net/internetradio/radio-maria-nederland.pls" rel="external">
-                            <img src="img/radiomaria.jpg" />Radio Maria Nederland  <br/>
+                            <img src="img/radiomaria.jpg" />Radio Maria Nederland<span class="ios"> (.pls)</span>
                         </a>
                     </li>
                     <li data-icon="plus" class="ios">
                         <a href="http://credomobiel.net/internetradio/radio-maria-nederland.m3u" rel="external">
-                            <img src="img/radiomaria.jpg" />Radio Maria Nederland  <br/>
+                            <img src="img/radiomaria.jpg" />Radio Maria Nederland<span class="android"> (.m3u)</span>
                         </a>
                     </li>
                     <li data-icon="plus" class="android">
                         <a href="http://credomobiel.net/internetradio/concertzender-gregoriaans.pls" rel="external">
-                            <img src="img/concertzender.png" />Concertzender Gregoriaans  <br/>
+                            <img src="img/concertzender.png" />Concertzender Gregoriaans<span class="ios"> (.pls)</span>
                         </a>
                     </li>
                     <li data-icon="plus" class="ios">
                         <a href="http://credomobiel.net/internetradio/concertzender-gregoriaans.m3u" rel="external">
-                            <img src="img/concertzender.png" />Concertzender Gregoriaans  <br/>
+                            <img src="img/concertzender.png" />Concertzender Gregoriaans<span class="android"> (.m3u)</span>
                         </a>
                     </li>
                 </ul>
