detecting android/ios

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             websites</a>
                     </li>
                     <li>
-                        <a href="apps.html"><img src="img/android-apps.png" />Android apps</a>
+                        <a href="apps.html"><img src="img/android-apps.png" />Apps</a>
                     </li>
                     <li>
                         <a href="e-boeken.html"><img src="img/e-boeken.png" />E-boeken</a>
