detecting android/ios

--- a/apps.html
+++ b/apps.html
@@ -42,7 +42,7 @@
                         <a
                             href="https://itunes.apple.com/us/app/evangelizo-daily-gospel/id379577026?mt=8" title="Evangelizo - Dagelijkse
                                 schriftlezingen en heiligenlevens">
-                            <img src="img/evangelizo.png" alt="Evangelizo"/>Evangelizo <span class="andriod">(iOS)</span><br /><small>Dagelijkse
+                            <img src="img/evangelizo.png" alt="Evangelizo"/>Evangelizo <span class="android">(iOS)</span><br /><small>Dagelijkse
                                 schriftlezingen en heiligenlevens</small>
                         </a>
                     </li>
