--- a/e-boeken.html
+++ b/e-boeken.html
@@ -38,7 +38,7 @@
                 </ul>
                 <div data-role="collapsible-set" data-inset="false">
                     <div data-role="collapsible" data-inset="false" data-collapsed="false">
-                        <h2>EPUB/PDF downloaden</h2>
+                        <h2>EPUB</h2>
                         <ul data-role="listview">
                             <li data-icon="plus">
                                 <a
@@ -63,25 +63,32 @@
                                        Grossouw</small>
                                </a>
                            </li>
+                        </ul>
+                    </div>
+                    <div data-role="collapsible" data-inset="false" data-collapsed="false">
+                        <h2>PDF</h2>
+                        <ul data-role="listview">
                             <li data-icon="plus">
                                 <a
-                                    href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/Katholieke-Avondgebeden.pdf"
+                                    href="http://issuu.com/vicmortelmans/docs/katholieke_avondgebeden"
                                     rel="external">
                                     <img src="img/avondgebeden.png"
                                     />Avondgebeden<br />
                                 </a>
+                                <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/Katholieke-Avondgebeden.pdf">PDF</a>
                             </li>
                             <li data-icon="plus">
                                 <a
-                                    href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/kyriale.pdf"
+                                    href="http://issuu.com/vicmortelmans/docs/kyriale_1_"
                                     rel="external">
                                     <img src="img/kyriale.png"
                                     />Kyriale<br /><small>bron:www.una.voce.de</small>
                                 </a>
+                                <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/kyriale.pdf">PDF</a>
                             </li>
                         </ul>
                     </div>
-                    <div data-role="collapsible" data-inset="false">
+                    <div data-role="collapsible" data-inset="false" data-collapsed="false">
                         <h2>Amazon</h2>
                         <ul data-role="listview">
                             <li>
