--- a/e-boeken.html
+++ b/e-boeken.html
@@ -38,8 +38,8 @@
                 </ul>
                 <div data-role="collapsible-set" data-inset="false">
                     <div data-role="collapsible" data-inset="false" data-collapsed="false">
-                        <h2>EPUB</h2>
                         <ul data-role="listview">
+                            <li data-role="list-divider">EPUB</li>
                             <li data-icon="plus">
                                 <a
                                     href="http://www.boekhandel.org/product/9789057191800"
@@ -63,11 +63,7 @@
                                        Grossouw</small>
                                </a>
                            </li>
-                        </ul>
-                    </div>
-                    <div data-role="collapsible" data-inset="false" data-collapsed="false">
-                        <h2>PDF</h2>
-                        <ul data-role="listview">
+                            <li data-role="list-divider">PDF</li>
                             <li data-icon="plus">
                                 <a
                                     href="http://issuu.com/vicmortelmans/docs/katholieke_avondgebeden"
@@ -86,11 +82,7 @@
                                 </a>
                                 <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/kyriale.pdf">PDF</a>
                             </li>
-                        </ul>
-                    </div>
-                    <div data-role="collapsible" data-inset="false" data-collapsed="false">
-                        <h2>Amazon</h2>
-                        <ul data-role="listview">
+                            <li data-role="list-divider">Amazon</li>
                             <li>
                                 <a
                                     href="http://www.amazon.com/dp/B00F758136"
