--- a/audiotest.html
+++ b/audiotest.html
@@ -15,7 +15,7 @@
 <h2>MP3</h2>
 
 <p>Radio Maria Nederland</p>
-<div id='my-video'></div><script type='text/javascript'> jwplayer('my-video').setup({ file: 'http://87.233.180.73:8000/;*.nsv',	type: 'mp3',	width: '300', height: '30',	autostart: true });</script> <!-- Free html5 Flash radio player generator by http://www.shoutcastireland.com -->
+<div id='my-video'></div><script type='text/javascript'> jwplayer('my-video').setup({ file: 'http://87.233.180.73:8000/;*.nsv',	type: 'mp3',	width: '300', height: '30',	autostart: false });</script> <!-- Free html5 Flash radio player generator by http://www.shoutcastireland.com -->
 
 
 <p>Radio Maria Vlaanderen</p>
@@ -28,6 +28,12 @@
 <audio controls width="100%">
   <source src="http://streams.greenhost.nl:8080/gregoriaans" type="audio/mpeg">
   <embed width="100%" src="http://streams.greenhost.nl:8080/gregoriaans">
+</audio>
+
+<p>Getijden</p>
+<audio controls width="100%">
+  <source src="http://streamcluster02.true.nl/mediapastoraat" type="audio/mpeg">
+  <embed width="100%" src="http://streamcluster02.true.nl/mediapastoraat">
 </audio>
 
 </body>
