--- a/audiotest.html
+++ b/audiotest.html
@@ -15,7 +15,16 @@
 <h2>MP3</h2>
 
 <p>Radio Maria Nederland</p>
-<div id='my-video'></div><script type='text/javascript'> jwplayer('my-video').setup({ file: 'http://87.233.180.73:8000/;*.nsv',	type: 'mp3',	width: '300', height: '30',	autostart: false });</script> <!-- Free html5 Flash radio player generator by http://www.shoutcastireland.com -->
+<div id='my-video'></div>
+<script type='text/javascript'> 
+    jwplayer('my-video').setup({ 
+        file: 'http://87.233.180.73:8000/;*.nsv',
+        type: 'mp3',
+        width: '100%', 
+        height: '30',
+        autostart: false
+    });</script>
+    <!-- Free html5 Flash radio player generator by http://www.shoutcastireland.com -->
 
 
 <p>Radio Maria Vlaanderen</p>
