adding radio players

--- a/internetradio-radio-maria-nederland.html
+++ b/internetradio-radio-maria-nederland.html
@@ -14,7 +14,7 @@
         <script src="js/credomobiel.js"></script>
         <script src="js/jquery.mobile-1.2.0.min.js"></script>
         <!-- script for shoutcast radio stations -->
-        <script type="text/javascript" src="js/jwplayer.js"></script>
+        <script type="text/javascript" src="http://www.shoutcastireland.com/jwplayer.js"></script>
     </head>
     <body>
         
