--- a/internetradio-radio-maria-nederland.html
+++ b/internetradio-radio-maria-nederland.html
@@ -10,9 +10,9 @@
         <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="apple-touch-icon-precomposed" href="favicon114.png" />
         <link rel="stylesheet" href="js/credomobiel.css" type="text/css"/>
-        <script src="js/jquery-1.8.2.min.js"></script>
+        <!--script src="js/jquery-1.8.2.min.js"></script>
         <script src="js/credomobiel.js"></script>
-        <script src="js/jquery.mobile-1.2.0.min.js"></script>
+        <script src="js/jquery.mobile-1.2.0.min.js"></script-->
         <!-- script for shoutcast radio stations -->
         <script type="text/javascript" src="http://www.shoutcastireland.com/jwplayer.js"></script>
     </head>
