--- a/internetradio-radio-maria-nederland.html
+++ b/internetradio-radio-maria-nederland.html
@@ -31,17 +31,17 @@
             <!-- /header -->
             
             <div data-role="content">
-<div id='my-video'></div>
-<script type='text/javascript'> 
-    jwplayer('my-video').setup({ 
-        file: 'http://87.233.180.73:8000/;*.nsv',
-        type: 'mp3',
-        width: '100%', 
-        height: '30',
-        autostart: false
-    });</script>
-    <!-- Free html5 Flash radio player generator by http://www.shoutcastireland.com -->
-
+                <div id='my-video'></div>
+                <script type='text/javascript'> 
+                    jwplayer('my-video').setup({ 
+                        file: 'http://87.233.180.73:8000/;*.nsv',
+                        type: 'mp3',
+                        width: '100%', 
+                        height: '30',
+                        autostart: true
+                    });
+                </script>
+                <!-- Free html5 Flash radio player generator by http://www.shoutcastireland.com -->
             </div>
             <!-- content -->
             
