--- a/audiotest.html
+++ b/audiotest.html
@@ -18,7 +18,7 @@
 <div id='my-video'></div>
 <script type='text/javascript'> 
     jwplayer('my-video').setup({ 
-        file: 'http://87.233.180.73:8000/;*.nsv',
+        file: 'http://webstream.radiomaria.nl;*.nsv',
         type: 'mp3',
         width: '100%', 
         height: '30',
@@ -29,8 +29,8 @@
 
 <p>Radio Maria Nederland</p>
 <audio controls width="100%">
-  <source src="http://webstream.radiomaria.nl" type="audio/mpeg">
-  <embed width="100%" src="http://webstream.radiomaria.nl">
+  <source src="http://webstream.radiomaria.nl;" type="audio/mpeg">
+  <embed width="100%" src="http://webstream.radiomaria.nl;">
 </audio>
 
 <p>Radio Maria Vlaanderen</p>
