--- a/audiotest.html
+++ b/audiotest.html
@@ -18,7 +18,7 @@
 <div id='my-video'></div>
 <script type='text/javascript'> 
     jwplayer('my-video').setup({ 
-        file: 'http://webstream.radiomaria.nl;*.nsv',
+        file: 'http://87.233.180.73:8000/;*.nsv',
         type: 'mp3',
         width: '100%', 
         height: '30',
@@ -26,12 +26,6 @@
     });</script>
     <!-- Free html5 Flash radio player generator by http://www.shoutcastireland.com -->
 
-
-<p>Radio Maria Nederland</p>
-<audio controls width="100%">
-  <source src="http://webstream.radiomaria.nl;" type="audio/mpeg">
-  <embed width="100%" src="http://webstream.radiomaria.nl;">
-</audio>
 
 <p>Radio Maria Vlaanderen</p>
 <audio controls width="100%">
