--- a/internetradio-radio-maria-nederland.html
+++ b/internetradio-radio-maria-nederland.html
@@ -38,7 +38,7 @@
                         type: 'mp3',
                         width: '100%', 
                         height: '30',
-                        autostart: true
+                        autostart: false
                     });
                 </script>
                 <!-- Free html5 Flash radio player generator by http://www.shoutcastireland.com -->
