adding radio players

--- a/audiotest.html
+++ b/audiotest.html
@@ -26,6 +26,11 @@
     });</script>
     <!-- Free html5 Flash radio player generator by http://www.shoutcastireland.com -->
 
+<p>Radio Maria Nederland</p>
+<div  id='azoto'><script type='text/javascript'> var __url__ = 'http://87.233.180.73:8000/;stream.mp3';
+</script>
+<script type='text/javascript' src='http://www.hostingshoutcast.com/player/azotoplayerbuilder.js'></script>
+</div>
 
 <p>Radio Maria Vlaanderen</p>
 <audio controls width="100%">
