--- a/internetradio.html
+++ b/internetradio.html
@@ -65,6 +65,11 @@
                             <img src="img/concertzender.png" />Concertzender Gregoriaans<span class="android"> (.m3u)</span>
                         </a>
                     </li>
+                    <li data-icon="plus">
+                        <a href="internetradio-radio-maria-nederland.html">
+                            <img src="img/radiomaria.jpg" />Radio Maria Nederland (test)
+                        </a>
+                    </li>
                 </ul>
             </div>
             <!-- content -->
