adding radio players

--- a/audiotest2.html
+++ b/audiotest2.html
@@ -13,23 +13,17 @@
 <p>Audio player</p>
 
 
-
-
-<p>Radio Maria Vlaanderen</p>
-  <div id='playerkxgrIfmGIEjg'></div>
-  <script type='text/javascript'>
-    jwplayer('playerkxgrIfmGIEjg').setup({
+<div id='playerZwKRTourpgQh'></div>
+<script type='text/javascript'>
+    jwplayer('playerZwKRTourpgQh').setup({
         file: 'http://stream.radiomaria.be:8000/RadioMaria-32',
-        image: 'https://si0.twimg.com/profile_images/2373267686/Radio_Maria_Logo.jpg',
-        title: 'Radio Maria Vlaanderen',
-        width: '100%',
-        aspectratio: '1:1',
-        controls: 'false',
-        fallback: 'false',
-        autostart: 'true'
+        image: 'https://www.longtailvideo.com/content/images/jw-player/lWMJeVvV-876.jpg',
+        title: 'RM',
+        width: '640',
+        height: '30',
+        fallback: 'false'
     });
 </script>
-
 
 
 </body>
