adding radio players

--- a/audiotest2.html
+++ b/audiotest2.html
@@ -21,7 +21,8 @@
         title: 'RM',
         width: '640',
         height: '30',
-        fallback: 'false'
+        fallback: 'false',
+primary: "flash"
     });
 </script>
 
