adding katholieke radio

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                              />Luisterboeken</a>
                     </li>
                     <li>
-                        <a href="internetradio.html"><img src="img/internetradio.png"
+                        <a href="http://vicmortelmans.github.io/catholic-radio-stations-html5-phonegap" rel="external"><img src="img/internetradio.png"
                              />Internetradio</a>
                     </li>
                     <li>
