--- a/apps.html
+++ b/apps.html
@@ -61,6 +61,11 @@
                         </a>
                     </li>
                     <li class="android">
+                        <a href="https://play.google.com/store/apps/details?id=net.credomobiel.katholiekeradio" title="Katholieke Radio">
+                            <img src="img/katholieke-radio.png" alt="Katholieke Radio"/>Katholieke Radio <span class="ios">(Android)</span><br /><small>nederlandstalige katholieke radio</small>
+                        </a>
+                    </li>
+                    <li class="android">
                         <a href="https://play.google.com/store/apps/details?id=appinventor.ai_epelic.RadioMaria" title="Radio Maria">
                             <img src="img/radio-maria-app.png" alt="Radio Maria"/>Radio Maria <span class="ios">(Android)</span><br /><small>alle wereldwijde stations beluisteren</small>
                         </a>
