two webpages added

--- a/mobiele-websites.html
+++ b/mobiele-websites.html
@@ -42,6 +42,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="http://www.google.com/gwt/x?u=http%3A%2F%2Fwww.rkdocumenten.nl%2Frkdocs%2Findex.php%3Fmi%3D650%26dos%3D383&btnGo=Go&source=wax&ie=UTF-8&oe=UTF-8" title="Dagelijkse Homilie van de Paus">
+                            <img src="img/rkdocumenten.png" alt="RK Documenten"/>Paus Franciscus<br /><small>Dagelijkse kleine homilieën</small>
+                        </a>
+                    </li>
+                    <li>
                         <a href="http://www.startdestilte.be/" title="Start de Stilte">
                             <img src="img/start-de-stilte.png" alt="Start de Stilte"/>Start de Stilte<br /><small>Leren bidden</small>
                         </a>
@@ -64,7 +69,12 @@
                     </li>
                     <li>
                         <a href="http://vicmortelmans.github.io/flashcards-html5-phonegap/index.web.html" title="Mechelse Catechismus" rel="external">
-                            <img src="img/mechelse-catechismus.png" />Catechismus
+                            <img src="img/mechelse-catechismus.png" alt="Mechelse Catechismus"/>Catechismus
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://www.hierzittoekomstin.be/" title="Adventskalender">
+                            <img src="img/hierzittoekomstin.png" alt="Adventskalender"/>Adventskalender<br /><small>Hier zit toekomst in</small>
                         </a>
                     </li>
                     <li>
