added 'naar de mis' webpage and app

--- a/apps.html
+++ b/apps.html
@@ -90,6 +90,11 @@
                             <img src="img/mechelse-catechismus.png" alt="Mechelse Catechismus"/>Mechelse Catechismus <span class="ios">(Android)</span><br /><small>Oefen je catechismus met vraag-en-antwoord</small>
                         </a>
                     </li>
+                    <li class="android">
+                        <a href="https://play.google.com/store/apps/details?id=net.credomobiel.masses" title="Naar de mis">
+                            <img src="img/naardemis.png" alt="Naar de mis"/>Naar de mis<span class="ios">(Android)</span><br /><small>in Vlaanderen</small>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <!-- content -->
