--- a/mobiele-websites.html
+++ b/mobiele-websites.html
@@ -88,6 +88,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="http://vicmortelmans.github.io/masses/" title="Naar de mis">
+                            <img src="img/naardemis.png" alt="Naar de mis"/>Naar de mis<br /><small>in Vlaanderen</small>
+                        </a>
+                    </li>
+                    <li>
                         <a href="http://www.mariakapellen.nl/Plaatsnamen.htm" title="Mariakapellen">
                             <img src="img/mariakapellen.png" alt="Mariakapellen"/>Mariakapellen<br /><small>in Nederland en Vlaanderen</small>
                         </a>
