--- a/mobiele-websites.html
+++ b/mobiele-websites.html
@@ -78,8 +78,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://retreats.sacredspace.ie/nl" title="Vastenretraite">
-                            <img src="img/gewijde-ruimte.png" alt="Vastenretraite"/>Vastenretraite
+                        <a href="http://retreats.sacredspace.ie/nl" title="Retraite voor Vasten of Advent">
+                            <img src="img/gewijde-ruimte.png" alt="Vastenretraite"/>Retraite voor Vasten of Advent
                         </a>
                     </li>
                     <li>
