adding Navolging on Google Play Books

--- a/e-boeken.html
+++ b/e-boeken.html
@@ -82,6 +82,15 @@
                                 </a>
                                 <a href="https://googledrive.com/host/0B-659FdpCliwTnNDZlYxQS0wVHc/books/kyriale.pdf">PDF</a>
                             </li>
+                            <li data-role="list-divider">Google Play Books</li>
+                            <li>
+                                <a
+                                    href="https://play.google.com/store/books/details/Thomas_a_Kempis_De_navolging_van_Christus?id=EYSsAAAAQBAJ"
+                                    rel="external">
+                                    <img src="img/navolging-e-boek.jpg" />De navolging van
+                                    Christus<br /><small>Thomas a Kempis</small>
+                                </a>
+                            </li>
                             <li data-role="list-divider">Amazon</li>
                             <li>
                                 <a
